...
    <string name="title_activity_about">About</string>
    <string name="error_title">Enter a title</string>

    <!-- string array for Create Severity -->
    <string-array name="create_severity">
        <item>[Select severity]</item>
        <item>1-Critical</item>
        <item>2-High</item>
        <item>3-Medium</item>
        <item>4-Low</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

...
